<resources>

    <!-- App Name -->
    <string name="app_name">Popular Movies</string>

    <!-- Master View App Bar Actions -->
    <string name="action_sort_by">Sort By</string>
    <string name="action_legal">Legal</string>

    <!-- Detail View App Bar Actions -->
    <string name="action_favorite">Favorite</string>

    <!-- Content Descriptions -->
    <string name="content_desc_movie_poster">Movie Poster</string>

    <!-- Snackbar: Offline -->
    <string name="snackbar_offline_message">No connection</string>
    <string name="snackbar_offline_action_retry">Retry</string>

    <!-- Movie Search Criteria -->
    <string name="criteria_popular" translatable="false">Popular</string>
    <string name="criteria_top_rated" translatable="false">Top Rated</string>
    <string name="criteria_favorite">Favorites</string>

    <!-- TMDb Legal Requirements -->
    <string name="legal_tmdb_disclaimer" translatable="false">
        This product uses the TMDb API but is not endorsed or certified by TMDb.
    </string>

    <!-- Detail View Headers -->
    <string name="header_trailers">Trailers</string>
    <string name="header_reviews">Reviews</string>

    <!-- Master View Error Messages -->
    <string name="message_movies_empty">No movies</string>
    <string name="message_movies_error_loading">Error loading movies</string>

    <!-- Detail View Error Messages -->
    <string name="message_trailers_offline">No connection</string>
    <string name="message_trailers_empty">No trailers</string>
    <string name="message_trailers_error_loading">Error loading trailers</string>
    <string name="message_reviews_offline">No connection</string>
    <string name="message_reviews_empty">No reviews</string>
    <string name="message_reviews_error_loading">Error loading reviews</string>

</resources>
